# agent-

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  AI开发维护手册.md  CLAUDE.md  README.md  UI方案选择.md  UI第一版验收建议.md  package.json  start-agent-swarm-desktop.bat  下一步开发路线.md  人类说明书.md  前端交互反推架构调整.md  新窗口交接说明.md
apps/: README.md
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src-tauri/src/commands/: agent_config.rs  agent_runs.rs  agents.rs  approvals.rs  auto_swarm.rs  idea_guidance.rs  mod.rs  model_catalog.rs  model_gateway.rs  project_intake.rs  project_plan.rs  projects.rs  runner_dry_run.rs  runner_execution_gate.rs  runner_execution_lock.rs  runner_minimal_run.rs  runner_preflight.rs  tasks.rs
apps/desktop/src-tauri/src/db/: mod.rs
apps/desktop/src-tauri/src/services/: agent_config.rs  agent_runs.rs  agents.rs  approvals.rs  auto_swarm.rs  idea_guidance.rs  mod.rs  model_catalog.rs  project_intake.rs  project_plan.rs  projects.rs  runner_dry_run.rs  runner_execution_gate.rs  runner_execution_lock.rs  runner_minimal_run.rs  runner_preflight.rs  tasks.rs
apps/desktop/src-tauri/src/services/model_gateway/: mod.rs  model_calls.rs  openai_compat.rs  project_plan.rs  provider_config.rs  redaction.rs
data/: README.md
design/: agent-console-progress.html  handoff.md  index.html  script.js  styles.css
dev-docs/: AI开发维护手册.md  HANDOVER-2026-06-16.md  MVP-0.4验收记录.md  Model Gateway正式入口设计.md  P0-AI员工模型执行器配置落地计划.md  P0-剩余6步一体化推进计划.md  P0-阶段1-SQLite-schema和命令盘点结论.md  README.md  下一步开发路线.md  人类说明书.md  (+44 more)
(+121 files in other folders)
